fix: Dark mode styling

--- a/docs/src/css/sectionHeader.css
+++ b/docs/src/css/sectionHeader.css
@@ -82,8 +82,3 @@
 	align-self: stretch;
 	flex-grow: 0;
 }
-
-[data-theme='dark'] .sectionHeaderTitle,
-[data-theme='dark'] .sectionHeaderSubtitle {
-	color: #FEFEFE
-}
